[MediaStream] Page capture state not reported correctly https://bugs.webkit.org/show_bug.cgi?id=172897 <rdar://problem/32493318>

Reviewed by Youenn Fablet.

Source/WebCore:

Test: fast/mediastream/media-stream-track-muted.html

* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::mediaState): Test for audio and video mute on the tracks.
(WebCore::MediaStream::characteristicsChanged): Call statusDidChange when m_mediaState
changes instead of m_muted, so the page is informed when just audio or video mute state
changes.
* Modules/mediastream/MediaStream.h:

* testing/Internals.cpp:
(WebCore::Internals::setMediaStreamTrackMuted): New.
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/mediastream/media-stream-track-muted-expected.txt: Added.
* fast/mediastream/media-stream-track-muted.html: Added.


Canonical link: https://commits.webkit.org/189803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217775 268f45cc-cd09-0410-ab3c-d52691b4dbfc